added time left to routes. Refactored UI, API
